# jucewebviewtest

./: CMakeLists.txt  README.md
Gui/flutter_ui/lib/: main.dart
Gui/flutter_ui/lib/widgets/: slider_param.dart  slider_widget.dart
Gui/flutter_ui/web/: index.html
Gui/flutter_ui/web/js/: JuceAdapter.js  jsInterop.js
Gui/flutter_ui/web/juce/: index.js
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: CMakeLists.txt
